<resources>
    <string name="app_name">UniBillingAndroid</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="add_new_meter">Add Meter</string>
    <string name="history">History</string>
    <string name="change_password">Change Password</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="dummy_name">John Doe</string>
    <string name="dummy_username">john_doe</string>
    <string name="dummy_initials">TL</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_tagline">All in one water meter reading app</string>
    <string name="developed_by">Developed By</string>
    <string name="atlas_company_name">Atlas Computer Technologies</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_to_continue">Please login to continue</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="settings">Settings</string>
    <string name="last_reading">Last reading</string>
    <string name="dummy_reading">56000</string>
    <string name="dummy_meter_serial">000-678-543</string>
    <string name="performance_title">Performance</string>
    <string name="total_meters_assigned">TMA</string>
    <string name="total_meters_read">TMR</string>
    <string name="import_from_remote">Import from remote</string>
    <string name="export_to_remote">Export to remote</string>
    <string name="search_something">search something</string>
    <string name="dummy_currency">ETB</string>
    <string name="label_total">Total</string>
    <string name="dummy_balance">200</string>
    <string name="label_vat">vat</string>
    <string name="label_payer">Payer</string>
    <string name="label_phone">Phone</string>
    <string name="label_wereda">Wereda</string>
    <string name="dummy_wereda">Mehal Meda</string>
    <string name="label_sub_city">Sub City</string>
    <string name="dummy_sub_city">Mankul</string>
    <string name="label_to">To</string>
    <string name="dummy_organization">Mehal Meda Water Supply</string>
    <string name="label_valid_till">Valid till</string>
    <string name="dummy_date">Jan 3, 2022</string>
    <string name="label_items">Items</string>
    <string name="label_quantity">Qty</string>
    <string name="label_actions">Actions</string>
    <string name="btn_label_submit">Submit</string>
    <string name="btn_label_enter_reason">Enter Reason</string>
    <string name="label_customer">Customer</string>
    <string name="label_bill_and_meter">Bill and Meter</string>
    <string name="label_name">Name :</string>
    <string name="label_kebele">Kebele</string>
    <string name="label_house_no">House No.</string>
    <string name="label_meter_serial">Serial No. :</string>
    <string name="label_bill_id">Bill Id</string>
    <string name="label_contract_no">Contract No.</string>
    <string name="label_current_reading">Current Reading</string>
    <string name="label_prev_reading">Previous Reading</string>
    <string name="label_consumption">Consumption</string>
    <string name="label_penalty">Penalty</string>
    <string name="reading_input">Meter Reading</string>
    <string name="reading_input_hint">Enter your reading</string>
    <string name="label_cancel">Cancel</string>
    <string name="btn_label_submit_reading">Submit Reading</string>
    <string name="label_reason_for_not_reading">Reason for not reading</string>
    <string name="btn_label_submit_reason">Submit Reason</string>
    <string name="generic_network_request_failed">Your request failed!</string>
    <string name="reading_submission_sucess">Meter reading are sucessfuly submitted.</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_profile_setting">Settings</string>
    <string name="label_logout">Logout</string>
    <string name="label_more_info">More info</string>
    <string name="label_about">About</string>
    <string name="label_settings">Settings</string>
    <string name="label_add_meter">Add Meter</string>
    <string name="btn_label_edit">Edit</string>
    <string name="edit_reading">Edit Reading</string>
    <string name="edit_reason">Edit Reason</string>
    <string name="atlas_about">Atlas Computer Technologies (ACT) is a legally registered IT company operating in the Ethiopian market, head quartered in Addis Ababa, Ethiopia.</string>
    <string name="visit_us">Visit Us</string>
    <string name="web_site">https://act.com.et</string>
    <string name="app_version">V 2.0</string>
    <string name="label_submmit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="password_reset">Reset Password</string>
    <string name="enter_old_password">Enter your current password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="please_fill_all_fields">Please fill all the fields</string>
    <string name="please_enter_your_old_password">Please enter your current password</string>
    <string name="please_enter_your_new_password">Enter your new password</string>
    <string name="please_make_sure_password_match">Please make sure your new password matches with your confirmation</string>
    <string name="password_change_success">You have successfully changed your password</string>
    <string name="found_no_read_meters">You have no read meters</string>
    <string name="found_no_read_meters_reason">You currently have no read meters. These might be because you have not read any meters yet or you have exported all your read meters.</string>
    <string name="no_nearby_meters">There are no meters nearby you.</string>
    <string name="enable_gps">Enable</string>
    <string name="exit">Go back</string>
    <string name="gps_not_enabled_msg">Please enable GPS to use these future</string>
    <string name="feature_not_available">There feature is not currently available.</string>
    <string name="title_feature_not_available">Feature not available</string>
    <string name="progress_string">on progress</string>
    <string name="logging_in">Logging in...</string>
    <string name="hidden_label">hidden</string>
    <string name="export_to_excel">Export To Excel</string>
    <string name="loading">Loading</string>
</resources>