<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_pin"
            android:title="@string/map"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_add_meter"
            android:icon="@drawable/ic_plus_circle"
            android:title="@string/add_new_meter"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            app:showAsAction="ifRoom" />

    </group>


</menu>
