<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="horizontal"
        android:gravity="center">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_reset"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="@dimen/margin_large"/>

        <EditText
            android:id="@+id/et_enter_old_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height"
            android:hint="@string/old_password"
            android:textSize="@dimen/text_size_x_medium"
            android:textColor="@color/colorDarkGray"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_x_large"
            android:background="@drawable/round_corner_background"
            android:padding="@dimen/fab_margin"
            android:maxLines="1"
            />

        <EditText
            android:id="@+id/et_enter_new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height"
            android:hint="@string/new_password"
            android:textSize="@dimen/text_size_x_medium"
            android:textColor="@color/colorDarkGray"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_x_large"
            android:background="@drawable/round_corner_background"
            android:padding="@dimen/fab_margin"
            android:maxLines="1"
            />

        <EditText
            android:id="@+id/et_confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height"
            android:hint="@string/confirm_password"
            android:textSize="@dimen/text_size_x_medium"
            android:textColor="@color/colorDarkGray"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_x_large"
            android:background="@drawable/round_corner_background"
            android:padding="@dimen/fab_margin"
            android:maxLines="1"
            />

        <TextView
            android:id="@+id/tv_submit_password_change"
            android:textSize="@dimen/text_size_x_medium"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_x_large"
            android:text="@string/label_submmit"
            android:textColor="@color/white"
            android:background="@drawable/round_btn_background"
            />

        <TextView
            android:id="@+id/tv_cancel_password_change"
            android:textSize="@dimen/text_size_x_medium"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/label_cancel"
            android:textColor="@color/white"
            android:background="@drawable/ic_round_background_danger"
            />


    </LinearLayout>


        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>


</RelativeLayout>