<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_normal">

    <LinearLayout
        android:id="@+id/ll_profile_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/label_profile_setting"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginBottom="@dimen/margin_small"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDarkGray"
            android:text="@string/label_change_password"
            android:textSize="@dimen/text_size_large"
            android:layout_marginBottom="@dimen/margin_normal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_more_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_normal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDarkGray"
                android:text="@string/label_more_info"
                android:textSize="@dimen/text_size_large"
                android:layout_marginBottom="@dimen/margin_normal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGray"/>

        </LinearLayout>




    <LinearLayout
        android:id="@+id/ll_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDarkGray"
            android:text="@string/label_about"
            android:textSize="@dimen/text_size_large"
            android:layout_marginBottom="@dimen/margin_normal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDarkGray"
            android:text="@string/label_logout"
            android:textSize="@dimen/text_size_large"
            android:layout_marginBottom="@dimen/margin_normal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray"/>

    </LinearLayout>


</LinearLayout>