<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="10"
        android:gravity="center">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="8">

            <LinearLayout
                android:id="@+id/sign_in_fragment_progress_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/sign_in_fragment_pb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />

                <TextView
                    android:id="@+id/sing_in_fragment_progress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/progress_string"
                    android:textAlignment="center"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="@dimen/text_size_large" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/sign_in_fragment_form_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_x_large"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/login_to_continue"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="@dimen/text_size_large" />

                <EditText
                    android:id="@+id/nav_header_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_height"
                    android:layout_marginTop="@dimen/margin_x_large"
                    android:background="@drawable/round_corner_background"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:maxLines="1"
                    android:padding="@dimen/fab_margin"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="@dimen/text_size_x_medium" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_height"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:background="@drawable/round_corner_background"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:padding="@dimen/fab_margin"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="@dimen/text_size_x_medium" />

                <TextView
                    android:id="@+id/et_error"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_height"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:gravity="center"
                    android:padding="@dimen/fab_margin"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="@dimen/text_size_x_medium"
                    android:visibility="gone"
                    app:backgroundTint="@color/white" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/margin_x_large"
                    android:background="@drawable/round_btn_background"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_x_medium" />

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_large" />

            </LinearLayout>



        </RelativeLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>